refactoring and copying existing stuff from CLRExplorer

--- a/DotNetExp/DotNetExp.rc
+++ b/DotNetExp/DotNetExp.rc
@@ -96,6 +96,16 @@ IDR_MAINFRAME           ICON                    "res\\DotNetExp.ico"
 // Dialog
 //
 
+IDD_PROCSELECT DIALOGEX 0, 0, 381, 276
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Process Selector"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+DEFPUSHBUTTON   "OK", IDOK, 132, 255, 50, 14, WS_DISABLED
+PUSHBUTTON      "Cancel", IDCANCEL, 198, 255, 50, 14
+CONTROL         "", IDC_PROCLIST, "SysListView32", LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_OWNERDATA | WS_BORDER | WS_TABSTOP, 7, 7, 373, 229
+END
+
 IDD_ABOUTBOX DIALOGEX 0, 0, 187, 102
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About .NET Explorer"
