--- a/DotNetExp/DotNetExp.vcxproj
+++ b/DotNetExp/DotNetExp.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{032B36E5-B815-4016-9501-9F9052CADF16}</ProjectGuid>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -70,12 +71,14 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <TargetName>$(ProjectName)64</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <TargetName>$(ProjectName)64</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -88,6 +91,7 @@
       <PreprocessorDefinitions>WIN32;_WINDOWS;STRICT;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\CLRDiag</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <ExceptionHandling>Async</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -121,6 +125,7 @@
       <PreprocessorDefinitions>_WINDOWS;STRICT;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\CLRDiag</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <ExceptionHandling>Async</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -147,7 +152,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <ExceptionHandling />
+      <ExceptionHandling>Async</ExceptionHandling>
       <DebugInformationFormat />
       <PreprocessorDefinitions>WIN32;_WINDOWS;STRICT;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\CLRDiag</AdditionalIncludeDirectories>
@@ -178,7 +183,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <ExceptionHandling />
+      <ExceptionHandling>Async</ExceptionHandling>
       <DebugInformationFormat />
       <PreprocessorDefinitions>_WINDOWS;STRICT;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\CLRDiag</AdditionalIncludeDirectories>
@@ -205,6 +210,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AboutDlg.cpp" />
+    <ClCompile Include="AssembliesTreeNode.cpp" />
     <ClCompile Include="DotNetExp.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="ProcessSelectDlg.cpp" />
@@ -221,6 +227,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h" />
+    <ClInclude Include="AssembliesTreeNode.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="ProcessSelectDlg.h" />
     <ClInclude Include="resource.h" />
@@ -234,7 +241,31 @@
     <ResourceCompile Include="DotNetExp.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\asm-dyn.ico" />
+    <Image Include="res\assembly.ico" />
+    <Image Include="res\class.ico" />
+    <Image Include="res\database.ico" />
+    <Image Include="res\delete.ico" />
+    <Image Include="res\deliverable.ico" />
     <Image Include="res\DotNetExp.ico" />
+    <Image Include="res\file_db.ico" />
+    <Image Include="res\Heap.ico" />
+    <Image Include="res\library.ico" />
+    <Image Include="res\memory.ico" />
+    <Image Include="res\method.ico" />
+    <Image Include="res\module.ico" />
+    <Image Include="res\nav_blue_left.ico" />
+    <Image Include="res\nav_blue_right.ico" />
+    <Image Include="res\object.ico" />
+    <Image Include="res\ok.ico" />
+    <Image Include="res\process.ico" />
+    <Image Include="res\processes.ico" />
+    <Image Include="res\save_as.ico" />
+    <Image Include="res\structure.ico" />
+    <Image Include="res\text.ico" />
+    <Image Include="res\threads-dead.ico" />
+    <Image Include="res\threads.ico" />
+    <Image Include="res\types.ico" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
