--- a/CLRDiag/CLRDiag.vcxproj.filters
+++ b/CLRDiag/CLRDiag.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="DumpFileDataTarget.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CLRMetadataParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CLRDiag.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DumpFileDataTarget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CLRMetadataParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
