--- a/DotNetExp/DotNetExp.vcxproj
+++ b/DotNetExp/DotNetExp.vcxproj
@@ -217,6 +217,7 @@
     <ClCompile Include="HeapTreeNode.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="ModulesTreeNode.cpp" />
+    <ClCompile Include="ObjectsTreeNode.cpp" />
     <ClCompile Include="ProcessSelectDlg.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -224,6 +225,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SortedFilteredVector.cpp" />
     <ClCompile Include="SortHelper.cpp" />
     <ClCompile Include="StringsTreeNode.cpp" />
     <ClCompile Include="SyncBlocksTreeNode.cpp" />
@@ -239,11 +241,14 @@
     <ClInclude Include="FilterDialogBar.h" />
     <ClInclude Include="FormatHelper.h" />
     <ClInclude Include="HeapTreeNode.h" />
+    <ClInclude Include="Interfaces.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="ModulesTreeNode.h" />
+    <ClInclude Include="ObjectsTreeNode.h" />
     <ClInclude Include="ProcessSelectDlg.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="SortedFilteredVector.h" />
     <ClInclude Include="SortHelper.h" />
     <ClInclude Include="StringsTreeNode.h" />
     <ClInclude Include="SyncBlocksTreeNode.h" />
