better object view and refresh fix

--- a/DotNetExp/DotNetExp.vcxproj.filters
+++ b/DotNetExp/DotNetExp.vcxproj.filters
@@ -271,11 +271,11 @@
     <Image Include="res\objects.ico">
       <Filter>Resource Files\Icons</Filter>
     </Image>
-    <Image Include="res\constant.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
     <Image Include="res\properties.ico">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Icons</Filter>
+    </Image>
+    <Image Include="res\constant.ico">
+      <Filter>Resource Files\Icons</Filter>
     </Image>
   </ItemGroup>
   <ItemGroup>
